--- a/fr.html
+++ b/fr.html
@@ -76,7 +76,7 @@
         </div>
         <div class="-mr-2 flex md:hidden">
           <button id="menu-toggle" class="inline-flex items-center justify-center p-2 rounded-md text-gray-700 hover:text-libelula-primary focus:outline-none">
-            <i data-feather="menu"></i>
+            <a href="index.html" class="nav-link">EN</a>
           </button>
         </div>
       </div>
@@ -88,9 +88,13 @@
     <!-- Hero Section -->
     <section id="hero" class="pt-32 pb-20 md:pt-40 md:pb-32 px-4 sm:px-6 lg:px-8">
       <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+        <div class="relative animate-float">
+          <img src="img/dragonfly.png" alt="Concept marketing"  />
+          <div class="absolute -z-10"></div>
+        </div>
         <div class="space-y-8">
           <h1 class="text-5xl md:text-7xl font-bold text-gray-900 leading-tight">
-            Esprits <span class="text-span">créatifs</span>, cœurs numériques
+            Esprits <span class="text-span">créatifs</span>, cœurs technologiques
           </h1>
           <p class="text-xl text-gray-600">
             Des solutions de marketing numérique qui transforment votre entreprise en une force irrésistible. Là où la créativité rencontre la stratégie.
@@ -104,10 +108,7 @@
             </a>
           </div>
         </div>
-        <div class="relative animate-float hidden lg:block">
-          <img src="img/dragonfly2.png" alt="Concept marketing"  />
-          <div class="absolute -z-10"></div>
-        </div>
+        
       </div>
     </section>
 
@@ -206,7 +207,7 @@
     <section id="portfolio" class="py-20 px-4 sm:px-6 lg:px-8 bg-white">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-16">
-                <h2 class="text-h2 mb-4">Travaux <span class="text-span">récents</span></h2>
+                <h2 class="text-h2 mb-4">Projets <span class="text-span">récents</span></h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">Découvrez comment nous avons aidé des marques à déployer leurs ailes</p>
             </div>
             <div class="grid md:grid-cols-3 gap-6">
@@ -252,7 +253,7 @@
     <section class="py-20 px-4 sm:px-6 lg:px-8" id="services">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-16">
-                <h2 class="text-h2 mb-4">Témoignages <span class="text-span">clients</span></h2>
+                <h2 class="text-h2 mb-4">L' <span class="text-span">amour</span> de nos clients</h2>
                 <p class="text-xl text-gray-600 max-w-3xl mx-auto">Ce que nos partenaires disent de notre collaboration</p>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -333,7 +334,7 @@
         <div class="max-w-7xl mx-auto">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="space-y-8">
-                    <h2 class="text-h2">Entrons en <span class="text-span">contact</span></h2>
+                    <h2 class="text-h2"><span class="text-span">Connectons</span> nos idées!</h2>
                     <p class="text-xl text-gray-600">
                         Que vous souhaitiez lancer, rebrander ou développer — nous serions ravis d'en savoir plus sur votre projet.
                     </p>
@@ -344,7 +345,7 @@
                             </div>
                             <div>
                                 <p class="text-gray-500">Écrivez-nous !</p>
-                                <a href="mailto:hola@libelulacreations.com" class="font-medium text-gray-900">hola@libelulacreations.com</a>
+                                <a href="mailto:hello@libelulacreations.com" class="font-medium text-gray-900">hello@libelulacreations.com</a>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -381,32 +382,38 @@
                         </a>
                     </div>
                 </div>
+
+                 <!--Contat Form Start-->
+
                 <div class="bg-gray-50 p-8 rounded-2xl shadow-inner">
-                    <form action="enviarcorreo.php" method="POST" class="space-y-6">
+                    <form action="mail.php" method="POST" class="space-y-6">
                       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div>
-                          <label for="nombre" class="block text-sm font-medium text-gray-700 mb-1">Nom</label>
-                          <input name="nombre" type="text" id="nombre" placeholder="Quel est votre nom ?" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required>
+                          <label for="nombre" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+                          <input name="nombre" type="text" id="nombre" placeholder="Nom de l'étoile!" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required>
                         </div>
                         <div>
-                          <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Courriel</label>
-                          <input name="email" type="email" id="email" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required>
+                          <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                          <input name="email" type="email" id="email" placeholder="e-mail" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required>
                         </div>
                       </div>
 
                       <div>
-                        <label for="subject" class="block text-sm font-medium text-gray-700 mb-1">Sujet</label>
-                        <input name="subject" type="text" id="subject" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required>
+                        <label for="subject" class="block text-sm font-medium text-gray-700 mb-1">Whatsapp / Phone numer</label>
+                        <input name="subject" type="tel" id="subject" placeholder="(XXX) XXX XXXX" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required>
                       </div>
 
                       <div>
                         <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Message</label>
-                        <textarea name="message" id="message" rows="4" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required></textarea>
+                        <textarea name="message" id="message" placeholder="On veut tout savoir ! Laissez votre message..." rows="4" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-libelula-primary focus:border-libelula-primary" required></textarea>
                       </div>
 
                       <button type="submit" class="w-full bg-libelula-primary text-white px-6 py-4 rounded-lg font-medium hover:bg-libelula-dark transition flex items-center justify-center ">
-                        Envoyer le message <i data-feather="send" class="ml-2 text-center"></i>
+                        Enoyer <i data-feather="send" class="ml-2 text-center"></i>
                       </button>
+
+                      <input type="hidden" name="_next" value="index.html">
+                      <input type="hidden" name="_captcha" value="false">
                     </form>
                 </div>
             </div>
